Bug 227506 - Applying tonemapping to a layer crashes Krita
Summary: Applying tonemapping to a layer crashes Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-18 12:23 UTC by Kubuntiac
Modified: 2010-02-26 22:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntiac 2010-02-18 12:23:12 UTC
Application: krita (2.2 Alpha 1)
KDE Platform Version: 4.4.00 (KDE 4.4.0) (Compiled from sources)
Qt Version: 4.6.1
Operating System: Linux 2.6.32-13-generic x86_64
Distribution: Ubuntu lucid (development branch)

-- Information about the crash:
STEPS TO REPRODUCE:
1. Open http://www.flickr.com/photos/billiejoesentourage/3730330633/sizes/l/ in firefox
2. Right click -> copy
3. New custom document in Krita using "First layer from Clipboard"
4. Select Layer -> Tonemapping
5. Click apply.
6. Crash.

I'm on Kubuntu Lucid AMD64 using revision 1092055

The crash can be reproduced every time.

 -- Backtrace:
Application: Krita (krita), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fe4e2b3d840 (LWP 17675))]

Thread 6 (Thread 0x7fe4cfce1710 (LWP 17676)):
#0  0x00007fe4e20de6cc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe4e236a70b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fe4e2366660 in QSemaphore::acquire(int) () from /usr/lib/libQtCore.so.4
#3  0x00007fe4e18c6b0e in KisTileDataPooler::waitForWork (this=0x7fe4e1c35720) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:128
#4  0x00007fe4e18c6f08 in KisTileDataPooler::run (this=0x7fe4e1c35720) at /home/user/source/koffice/krita/image/tiles3/kis_tile_data_pooler.cc:157
#5  0x00007fe4e2369755 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007fe4e20d9b14 in start_thread () from /lib/libpthread.so.0
#7  0x00007fe4daadb07d in clone () from /lib/libc.so.6
#8  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fe4bbed4710 (LWP 17678)):
#0  0x00007fe4daad3c03 in select () from /lib/libc.so.6
#1  0x00007fe4e24846ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007fe4e2489d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007fe4e248aaeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fe4e245c582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fe4e245c95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fe4e2366d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fe4e243cdc8 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007fe4e2369755 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fe4e20d9b14 in start_thread () from /lib/libpthread.so.0
#10 0x00007fe4daadb07d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fe4ae382710 (LWP 17679)):
#0  0x00007fe4e20dea39 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe4b3c6bc91 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fe4e20d9b14 in start_thread () from /lib/libpthread.so.0
#3  0x00007fe4daadb07d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe4a7e5c710 (LWP 17682)):
#0  0x00007fe4daad3c03 in select () from /lib/libc.so.6
#1  0x00007fe4e24846ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007fe4e2489d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007fe4e248aaeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fe4e245c582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fe4e245c95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fe4e2366d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fe4e2369755 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007fe4e20d9b14 in start_thread () from /lib/libpthread.so.0
#9  0x00007fe4daadb07d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe4a6e5a710 (LWP 17690)):
#0  0x00007fe4daad3c03 in select () from /lib/libc.so.6
#1  0x00007fe4e24846ce in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007fe4e2489d3d in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007fe4e248aaeb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fe4e245c582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fe4e245c95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fe4e2366d39 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fe4b3ec7570 in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#8  0x00007fe4e2369755 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fe4e20d9b14 in start_thread () from /lib/libpthread.so.0
#10 0x00007fe4daadb07d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe4e2b3d840 (LWP 17675)):
[KCrash Handler]
#5  QString (this=0x0) at /usr/include/qt4/QtCore/qstring.h:723
#6  KoColorProfile::name (this=0x0) at /home/user/source/koffice/libs/pigment/KoColorProfile.cpp:57
#7  0x00007fe4deff7635 in KoColorSpaceFactory::grabColorSpace (this=0x0, profile=0x0) at /home/user/source/koffice/libs/pigment/KoColorSpaceFactory.cpp:88
#8  0x00007fe4deff939a in KoColorSpaceRegistry::grabColorSpace (this=<value optimized out>, colorSpace=0x5fb2b50) at /home/user/source/koffice/libs/pigment/KoColorSpaceRegistry.cpp:265
#9  0x00007fe4e196562d in KisPaintDevice (this=0x8b35380, colorSpace=0x5fb2b50, name=<value optimized out>) at /home/user/source/koffice/krita/image/kis_paint_device.cc:119
#10 0x00007fe49df9f0c7 in Array2DImpl (this=0x7fff131dbb20, cols=<value optimized out>, rows=768) at /home/user/source/koffice/krita/plugins/extensions/tonemapping/libpfs/kis_array2d.cc:39
#11 0x00007fe49dfa3d19 in KisReinhard02Operator::toneMap (this=<value optimized out>, device=)
    at /home/user/source/koffice/krita/plugins/extensions/tonemapping/operators/reinhard02/kis_reinhard02_operator.cc:91
#12 0x00007fe49df98cf3 in KisToneMappingDialog::apply (this=0x729fb10) at /home/user/source/koffice/krita/plugins/extensions/tonemapping/kis_tonemapping_dialog.cc:100
#13 0x00007fe49df99afc in KisToneMappingDialog::qt_metacall (this=0x729fb10, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff131dc030)
    at /home/user/Apps/koffice/build/krita/plugins/extensions/tonemapping/kis_tonemapping_dialog.moc:80
#14 0x00007fe4e2470a5f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#15 0x00007fe4dc40a04e in ?? () from /usr/lib/libQtGui.so.4
#16 0x00007fe4dc40a22c in QAbstractButton::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#17 0x00007fe4dc0ac3f9 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#18 0x00007fe4dc05607c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0x00007fe4dc05ce4b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0x00007fe4dcd5edb6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#21 0x00007fe4e245dc5c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#22 0x00007fe4dc05c01e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#23 0x00007fe4dc0db515 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007fe4dc0da22a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#25 0x00007fe4dc1065b9 in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007fe4e245c582 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0x00007fe4e245c95c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#28 0x00007fe4e246069b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#29 0x00007fe4e2775d45 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/user/source/koffice/krita/main.cc:49
#30 0x00007fe4daa15c4d in __libc_start_main () from /lib/libc.so.6
#31 0x00000000004008d9 in _start ()

This bug may be a duplicate of or related to bug 224233.

Possible duplicates by query: bug 224233.

Reported using DrKonqi
Comment 1 Cyrille Berger 2010-02-26 22:57:52 UTC
SVN commit 1096569 by berger:

Ignore color space that don't have a factory when grabbing
Fix crash when applying tonemapping

BUG:227506



 M  +2 -1      krita/plugins/extensions/tonemapping/libpfs/kis_array2d.cc  
 M  +11 -2     libs/pigment/KoColorSpaceRegistry.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096569