Ignore color space that don't have a factory when grabbing Fix crash when applying tonemapping

BUG:227506


svn path=/trunk/koffice/; revision=1096569